Bug 1627505. Use WS_EX_LAYERED on the compositor window to prevent Direct Manipulation from finding it. r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D69765

--HG--
extra : moz-landing-system : lando